# mathematicaplugin

./: AUTHORS  ChangeLog  Makefile.am  README  configure.ac
examples/: Makefile.am  error.hex  errorLinSolve.hex  matheTest.hex  noSolution.hex  noSolutionLinSolve.hex  symbols.hex  symbolsLinSolve.hex  underdet2LinSolve.hex  underdetLinSolve.hex  underdetermined2.hex  undetermined.hex
examples/tests/: bIsMatrix.out  error.err  matheTest.out  mathematicaplugintests.test  noSolution.out  run-dlvhex-tests.sh  symbols.out  symbolsLinSolve.out  underdet2LinSolve.out  underdetLinSolve.out  underdetermined2.out  undetermined.out  vectorWithArity3.out
include/: LinearSolve.hpp  Makefile.am  UniqueLinSolve.hpp  mathlinksingleton.hpp
src/: LinearSolve.cpp  Makefile.am  MathematicaPlugin.cpp  UniqueLinSolve.cpp  mathematicaplugin.cpp  mathlinksingleton.cpp
