EXTRA_DIST = \
  bIsMatrix.hex \
  error.hex \
  errorLinSolve.hex \
  matheTest.hex \
  noSolution.hex \
  noSolutionLinSolve.hex \
  symbols.hex \
  symbolsLinSolve.hex \
  underdet2LinSolve.hex \
  underdetermined2.hex \
  underdetLinSolve.hex \
  undetermined.hex \
  vectorWithArity3.hex \
  tests/answerset_compare.py \
  tests/run-dlvhex-tests.sh \
  tests/mathematicaplugintests.test \
  tests/bIsMatrix.out \
  tests/matheTest.out \
  tests/noSolution.out \
  tests/symbols.out \
  tests/symbolsLinSolve.out \
  tests/underdet2LinSolve.out \
  tests/underdetermined2.out \
  tests/underdetLinSolve.out \
  tests/undetermined.out \
  tests/vectorWithArity3.out \
  tests/error.err

TESTS = tests/run-dlvhex-tests.sh
TESTS_ENVIRONMENT = TOPSRCDIR=$(top_srcdir) TOPBUILDDIR=$(top_builddir)
